sonar bugs