@@ -49,11 +49,11 @@ public class UpdatePageDateQuestionSteps {
       messagingInfo = new MessagingInfo(false, null, null, null, false, null);
     } else {
       messagingInfo = new MessagingInfo(
-          "true".equals(map.get("includedInMessage").toLowerCase()),
+          "true".equalsIgnoreCase(map.get("includedInMessage")),
           map.get("messageVariableId"),
           map.get("labelInMessage"),
           map.get("codeSystem"),
-          "true".equals(map.get("requiredInMessage").toLowerCase()),
+          "true".equalsIgnoreCase(map.get("requiredInMessage")),
           map.get("hl7DataType"));
     }
 
@@ -63,7 +63,7 @@ public class UpdatePageDateQuestionSteps {
         "true".equals(map.get("visible")),
         "true".equals(map.get("enabled")),
         "true".equals(map.get("required")),
-        Long.valueOf(map.get("displayControl")),
+        Long.parseLong(map.get("displayControl")),
         DateMask.valueOf(map.get("mask")),
         "true".equals(map.get("allowFutureDates")),
         reportingInfo,
@@ -75,7 +75,7 @@ public class UpdatePageDateQuestionSteps {
   public void send_update_page_date_request() throws Exception {
     WaTemplate page = pageMother.one();
     List<WaUiMetadata> content = pageMother.pageContent();
-    long id = content.get(content.size() - 1).getId();
+    long id = content.getLast().getId();
     response.active(requester.send(page.getId(), id, request));
   }
 
@@ -83,7 +83,7 @@ public class UpdatePageDateQuestionSteps {
   public void page_date_is_updated() throws Exception {
     response.active()
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.displayControl", equalTo(Long.valueOf(request.displayControl()).intValue())))
+        .andExpect(jsonPath("$.displayControl", equalTo(request.displayControl())))
         .andExpect(jsonPath("$.allowFutureDates", equalTo(request.allowFutureDates())))
         .andExpect(jsonPath("$.mask", equalTo(request.mask().toString())))
 
